Be able to build on JDK17 (#11500)
Motivation:

As the release of JDK17 is getting closer and there are ea builds already we should ensure we can actually build netty with it.

Modifications:

- Add profile for JDK17
- Remove test-code that would fail with JDK17 due the changes in https://github.com/openjdk/jdk17/commit/4f4d0f5366a8926f373ea25774a536399281c841.

Result:

Be able to build and run testsuite with JDK17